2013-11-27  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.h:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp: 

2013-11-26  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp: 

2013-11-26  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* OutlineTreeModel.h:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.cpp: 

2013-11-26  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp:
	* Configuration.h:
	* Configuration.cpp:
	* X3DOutlineTreeView.h:
	* OutlineRouteGraph.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp: 

2013-11-26  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.cpp: 

2013-11-26  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineRouteGraph.cpp:
	* OutlineTreeViewEditor.cpp: 

2013-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineTreeViewEditor.cpp: 

2013-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.cpp: 

2013-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* inputOnly.0.png:
	* outputOnly.0.png:
	* OutlineTreeData.h:
	* inputOutput.0.0.png:
	* inputOutput.0.2.png:
	* inputOutput.0.1.png:
	* inputOutput.1.0.png:
	* OutlineUserData.h:
	* OutlineSelection.h:
	* OutlineTreeData.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineUserData.h:
	* X3DOutlineTreeView.h: